# project_structure

./: Readme.md  example.ipynb  main.py  projectstructure.py
Python/: requirements.txt  setup.py
Python/SampleProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artifacts/: train.csv
project_structure_sample/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
project_structure_sample/.github/: ISSUE_TEMPLATE.md
project_structure_sample/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
project_structure_sample/src/project_structure_sample/: __init__.py
project_structure_sample/tests/: __init__.py  test_project_structure_sample.py
src/components/: dataingestion.py
src/exception/: exception.py
src/logging/: logger.py
