[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project_structure_sample"
version = "0.1.0"
description = "how to create a project sturcture for ML and AI / Data projects and automate"
readme = "README.rst"
authors = [
  {name = "Umair", email = "umair.tech@outlook.com"}
]
maintainers = [
  {name = "Umair", email = "umair.tech@outlook.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/muali012/project_structure_sample/issues"
changelog = "https://github.com/muali012/project_structure_sample/blob/master/changelog.md"
homepage = "https://github.com/muali012/project_structure_sample"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

